# stale_prs_are_bad

./: .pr-hygiene.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: pr-hygiene.yml
.pr-hygiene/: authors.json
.pr-hygiene/history/: 2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  (+13 more)
docs/: _config.yml  index.md
src/: analyzer.rs  config.rs  fetcher.rs  history.rs  labeler.rs  lib.rs  main.rs  model.rs  renderer.rs  scorer.rs
tests/: end_to_end.rs
tests/fixtures/: sample_prs.json
tests/snapshots/: end_to_end__end_to_end_pipeline_matches_snapshot.snap
