[package]
name = "pr-hygiene"
version = "0.1.0"
edition = "2021"
description = "Nightly PR-hygiene dashboard for dashpay/platform"
license = "MIT"
publish = false

[[bin]]
name = "pr-hygiene"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.40", features = ["json"] }
pretty_assertions = "1.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
